<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_daily_workout_entry"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.elllistech.dailyworkout.DailyWorkoutEntryActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtTitle"
        android:textSize="28sp"
        android:textColor="@android:color/black"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/txtTitle" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:id="@+id/editTxtActivity"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp"
        android:hint="@string/editTxtActivity"
        android:textColor="@android:color/black"
        android:inputType="text" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="100dp"
        android:id="@+id/editTxtMiles"
        android:hint="@string/editTxtMiles"
        android:textSize="20sp"
        android:inputType="number" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="150dp"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:hint="@string/editTxtDate"
        android:inputType="date"
        android:id="@+id/editTxtDate" />

    <Button
        android:text="@string/btnAddActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnAddActivity"
        android:textColor="@android:color/black"
        android:layout_below="@+id/editTxtDate"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/btnAddActivity"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/defaultLayout">

    </RelativeLayout>

</RelativeLayout>
