<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.elllistech.dailyworkout.ActivityDisplayFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fragDisplayActivity">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray">

            <TextView
                android:text="@string/txtColumnActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtColumnActivity"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:layout_weight="25"
                android:textAlignment="center" />

            <TextView
                android:text="@string/txtColumnMiles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtColumnMiles"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:layout_weight="25"
                android:textAlignment="center" />

            <TextView
                android:text="@string/txtColumnDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtColumnDate"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:layout_weight="25"
                android:textAlignment="center" />
        </TableRow>

    </TableLayout>

</FrameLayout>
